	* vignettes/pdf/*: Rebuilt

2024-07-07  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/internal/SEXP_Iterator.h: Avoid using VECTOR_PTR
	* inst/include/Rcpp/vector/Subsetter.h: Avoid using STRING_PTR
	* inst/include/RcppCommon.h: Include compatibility defines
	* src/barrier.cpp: Avoid using {STRING/VECTOR}_PTR
	* inst/include/Rcpp/r/compat.h: Include compatibility defines

2024-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-06-11  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/internal/r_vector.h: Use template specializations to
	avoid DATAPTR usage
	* inst/include/Rcpp/vector/traits.h: Implement bounds checks in
	r_vector_cache access
	* inst/tinytest/cpp/Vector.cpp: Add unit tests
	* inst/tinytest/test_vector.R: Add unit tests
	* tests/tinytest.R: Test in serial by default

2024-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/internal/export.h: More R_xlen_t switching
	* inst/include/Rcpp/vector/SubMatrix.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem

2024-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/internal/Proxy_Iterator.h (Proxy_Iterator):
	Switch to R_xlen_t ('clang++-17 -Wconversion -Wno-sign-conversion')
	* inst/include/Rcpp/DataFrame.h: Idem
	* inst/include/Rcpp/Vector.h: Idem

2024-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove link references to StackOverflow
	* inst/NEWS.Rd: Idem
	* inst/include/Rcpp/Module.h (S4_CppOverloadedMethods): Add cast to int
	to avoid warnings under 'clang++-17 -Wconversion -Wno-sign-conversion'
	* inst/include/Rcpp/vector/Vector.h (Vector): Idem
	* inst/include/Rcpp/module/class.h: Switch variable to size_t to avoid